# HighDimMSP

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt
results/: .gitignore  beamer.tex  results.tex
src/: CMakeLists.txt  Key.h  MSP.cpp  MSP.h  MSP.hpp  Node.cpp  Node.h  Node.hpp  Params.h  State.h  Tree.cpp  Tree.h  Tree.hpp  alphaAnalysis.cpp  main.cpp  main2D.cpp  sampling2D.cpp  test.cpp
src/astar/: Astar.h  Astar.hpp  Graph.h  Graph.hpp  GraphElements.h
